home page: fixed col-sm div height not wrapping

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -43,6 +43,7 @@ $text-color: #585858;
 		margin-bottom: $margin-bottom;
 		padding: 0 1em 0 1em;
 	}
+
 }
 
 #services {
@@ -172,7 +173,6 @@ $text-color: #585858;
 
 }
 
-
 @media (max-width: $screen-sm-max) { 
 	.circle {
 		position: absolute;
@@ -188,5 +188,9 @@ $text-color: #585858;
 		z-index: -10;
 		width: 50%;
 	}
+	.col-xs-6:nth-child(odd) {
+    	clear: both;
+	}
+
 }
 
